@@ -84,7 +84,7 @@ cd atalan\examples
 
 ..\bin\atalan unit_test
 
-..\bin\atalan pmg
+..\bin\atalan PMG
 
 cd ..
 cd ..
