@@ -1,6 +1,6 @@
 ﻿; Player/Missile Graphics
 ; Demo program for ATALAN programming language
-;(c) 2010 Rudla Kudla
+;(c) 2011 Rudla Kudla
 
 use atari
 
@@ -21,12 +21,13 @@ const smiley:array =
 	%00000000	 
 
 ;This is minimal initialization code for PMG
-init'pmgbase
+pmg.initbase
 DMACTL = playfield + dl + players + missiles + hires_sprites
 GRACTL = players + missiles
+SPRIOR = 1
 
 ;Set the player 0 properties and define it's shape 
-player(0).scolor = Medium'green
+player(0).scolor = medium'green
 player(0).x = 100
 player(0).bitmap(50) = smiley
 
